--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -239,3 +239,4 @@ migration:
           - l10n_ch_import_cresus
           - l10n_ch_payment_slip
           - l10n_ch_scan_bvr
+          - sf_account_cutoff
