No downpayment line on DN / Invoice

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -251,5 +251,6 @@ migration:
           - sale_order_lot_selection
           # local-src
           - sf_sale_state
+          - sf_product
           - sf_stock
           - sf_sale
