--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -38,6 +38,7 @@ ENV ADDONS_PATH="/opt/odoo/external-src/enterprise, \
   /opt/odoo/external-src/web, \
   /opt/odoo/external-src/account-invoicing, \
   /opt/odoo/external-src/bank-statement-import, \
+  /opt/odoo/external-src/odoo-apps, \
   /opt/odoo/local-src," \
   LIMIT_TIME_CPU=86400 \
   LIMIT_TIME_REAL=86400 \
