--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -262,3 +262,4 @@ migration:
           - sf_account
           - sf_account_budget
           - sf_account_asset_management
+          - sf_helpdesk
