Add 2nd salesperson

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -269,3 +269,4 @@ migration:
           - partner_external_map
           # local-src
           - sf_account_financial_reporting
+          - sf_sale
