General Ledger account type filter

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -267,3 +267,5 @@ migration:
       addons:
         upgrade:
           - partner_external_map
+          # local-src
+          - sf_account_financial_reporting
