--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -279,3 +279,8 @@ migration:
           # local-src
           - sf_mrp
           - sf_rma_mrp_repair
+    - version: 10.25.0
+      addons:
+        upgrade:
+          # local-src
+          - sf_account
