--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -301,6 +301,7 @@ migration:
           - sf_sale
           - sf_rma
           - sf_rma_sale_order
+          - sf_stock
           # external-src/purchase-workflow
           - purchase_discount
           # external-src/bank-payment
