[BSSFL-504][IMP] redefine res.partner _compute_display_name to change partner name on email form

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -323,3 +323,8 @@ migration:
           - sf_rma_sale_order
           # akretion/odoo-usability
           - mrp_average_cost
+    - version: 10.28.0
+      addons:
+        upgrade:
+          # local-src
+          - sf_mail
