--- a/.gitmodules
+++ b/.gitmodules
@@ -63,3 +63,7 @@
 	path = odoo/external-src/odoo-apps
 	url = git@github.com:camptocamp/odoo-apps.git
 	branch = 10.0
+[submodule "odoo/external-src/purchase-workflow"]
+	path = odoo/external-src/purchase-workflow
+	url = git@github.com:OCA/purchase-workflow.git
+	branch = 10.0
