--- a/odoo/Dockerfile
+++ b/odoo/Dockerfile
@@ -31,6 +31,7 @@ ENV ADDONS_PATH="/opt/odoo/external-src/enterprise, \
   /opt/odoo/external-src/partner-contact, \
   /opt/odoo/external-src/reporting-engine, \
   /opt/odoo/external-src/sale-workflow, \
+  /opt/odoo/external-src/purchase-workflow, \
   /opt/odoo/external-src/account-analytic, \
   /opt/odoo/external-src/server-tools, \
   /opt/odoo/external-src/stock-logistics-workflow, \
