[BSSFL-547] MRP average cost

--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -318,3 +318,5 @@ migration:
         upgrade:
           # local-src
           - sf_report
+          # akretion/odoo-usability
+          - mrp_average_cost
