--- a/odoo/migration.yml
+++ b/odoo/migration.yml
@@ -328,3 +328,13 @@ migration:
         upgrade:
           # local-src
           - sf_mail
+    - version: 10.29.0
+      operations:
+        post:
+          - "sh -c 'PGPASSWORD=$DB_PASSWORD psql -h $DB_HOST -U $DB_USER -f odoo/songs/upgrade/10_29_0_update.sql $DB_NAME'"
+      addons:
+        upgrade:
+          # local-src
+          - sf_partner_entity_type
+          - sf_mail
+          - sf_serial_owner
