Register invitation key

--- a/odoo/local-src/server_environment_files/dev/base.conf
+++ b/odoo/local-src/server_environment_files/dev/base.conf
@@ -1,3 +1,10 @@
+[ir.config_parameter]
+ribbon.name=Dev
+api.sensefly.url=https://test.sensefly.io/v1/
+api.sensefly.user=odoo-service
+api.sensefly.password=zkMFH_i65+kj2c4QEr
+api.sensefly.invitation_keys=invitation-keys/
+
 [incoming_mail]
 server=smtp.mailtrap.io
 port=1100
