--- a/odoo/local-src/server_environment_files/test/base.conf
+++ b/odoo/local-src/server_environment_files/test/base.conf
@@ -14,3 +14,10 @@ smtp_port = 2525
 smtp_encryption = starttls
 smtp_user = bbea6448c2f552
 smtp_pass = bbf71fc3740235
+
+[ir.config_parameter]
+ribbon.name=Test
+api.sensefly.url=https://test.sensefly.io/v1/
+api.sensefly.user=odoo-service
+api.sensefly.password=zkMFH_i65+kj2c4QEr
+api.sensefly.invitation_keys=invitation-keys/
