--- a/odoo/local-src/server_environment_files/default/base.conf
+++ b/odoo/local-src/server_environment_files/default/base.conf
@@ -1,2 +1,6 @@
 [ir.config_parameter]
 ribbon.name=Dev
+api.sensefly.url=https://test.sensefly.io/v1/
+api.sensefly.user=odoo-service
+api.sensefly.password=zkMFH_i65+kj2c4QEr
+api.sensefly.invitation_keys=invitation-keys/
