--- a/odoo/local-src/server_environment_files/prod/base.conf
+++ b/odoo/local-src/server_environment_files/prod/base.conf
@@ -1,5 +1,9 @@
 [ir.config_parameter]
 ribbon.name=False
+api.sensefly.url=https://test.sensefly.io/v1/
+api.sensefly.user=odoo-service
+api.sensefly.password=zkMFH_i65+kj2c4QEr
+api.sensefly.invitation_keys=invitation-keys/
 
 [incoming_mail]
 server=outlook.office365.com
